@@ -5,7 +5,7 @@ enabled_platforms=fabric,forge
 
 archives_base_name=ad-astra
 mod_id=ad_astra
-mod_version=1.13.0
+mod_version=1.13.1
 maven_group=earth.terrarium
 
 fabric_loader_version=0.14.12
