@@ -1,3 +1,5 @@
-Updated to 1.19.3 :)
+- Fixed flag model broken
+- Fixed nbt saving issue on forge
+- Fixed planet selection screen packet
 
-Disclaimer: Ad Astra will be releasing a large 1.19.3 update in the future that will break with the this current 1.19.3 version. Use at your own risk!
+Disclaimer: Ad Astra will be releasing a large 1.19.3 update in the future that will break with this current 1.19.3 version. Use at your own risk!
